distributed/kubernetes/flask-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: gcr.io/comp-workers/flask:k8s-12
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
