distributed/kubernetes/flower-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flower-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower-monitor
  template:
    metadata:
      labels:
        app: flower-monitor
    spec:
      containers:
        - name: flower-monitor
          image: mher/flower
          imagePullPolicy: Always
          command: ["flower"]
          args: ["--broker=redis://redis-master/0", "--port=8888"]
          ports:
            - containerPort: 8888
          resources:
            requests:
              memory: "95Mi"
              cpu: "75m"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: size
                    operator: In
                    values:
                      - small
