distributed/kubernetes/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  ports:
  - port: 5050
    targetPort: 5050
  selector:
    app: flask
  type: LoadBalancer
