distributed/kubernetes/flower-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flower-monitor
spec:
  type: LoadBalancer
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: flower-monitor
