distributed/kubernetes/minikube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: flask.worker
    http:
      paths:
      - path: /
        backend:
          serviceName: flask
          servicePort: 5000
